--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,6 @@
 *, ::before, ::after {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;}
+    box-sizing: border-box;
+    font-family: 'Indie Flower', cursive;
+}
