--- a/src/assets/css/produits.css
+++ b/src/assets/css/produits.css
@@ -1,6 +1,6 @@
 .containerProduits {
     background-color: #e5e5e5;
-    width: 45vw;
+    width: 90vw;
     border-radius: 10px;
     padding: 2px;
 }
@@ -11,14 +11,29 @@
     height: 100%;
     object-fit: cover;
     transform: scale(.8);
+    transition: transform 0.3s ease-in-out;
 }
 
 .containerProduits img:hover {
     transform: scale(1);
-    transition: transform 0.3s ease-in-out;
 }
 .cardProduitDescription {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    font-size: 1.3em;
+}
+
+@media screen and (min-width: 600px) {
+    .containerProduits {
+        width: 40vw;
+
+    }
+}
+
+@media screen and (min-width: 950px) {
+    .containerProduits {
+        width: 30vw;
+
+    }
 }
